NEW127505
[iOS] Protect against possible deadlock by delaying video layer creation
https://bugs.webkit.org/show_bug.cgi?id=127505
Summary [iOS] Protect against possible deadlock by delaying video layer creation
Jer Noble
Reported 2014-01-23 12:31:37 PST
[Mac] Protect against possbile deadlock by delaying video layer creation
Attachments
Patch (2.86 KB, patch)
2014-01-23 12:36 PST, Jer Noble
no flags
Patch for landing (2.66 KB, patch)
2014-01-23 13:47 PST, Jer Noble
commit-queue: commit-queue-
Patch for landing (2.66 KB, patch)
2014-01-23 20:35 PST, Jer Noble
no flags
Jer Noble
Comment 1 2014-01-23 12:36:54 PST
Eric Carlson
Comment 2 2014-01-23 12:40:48 PST
Comment on attachment 222017 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=222017&action=review > Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:429 > if (!m_videoLayer) { You could add "|| m_videoLayer" to the early return above and get rid of this test.
Eric Carlson
Comment 3 2014-01-23 13:04:35 PST
Comment on attachment 222017 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=222017&action=review > Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:430 > + callOnMainThread([this] { This should return if m_videoLayer is non-NULL.
Jer Noble
Comment 4 2014-01-23 13:47:50 PST
Created attachment 222025 [details] Patch for landing
WebKit Commit Bot
Comment 5 2014-01-23 20:27:47 PST
Comment on attachment 222025 [details] Patch for landing Rejecting attachment 222025 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-02', 'validate-changelog', '--check-oops', '--non-interactive', 222025, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in Source/WebCore/ChangeLog contains OOPS!. Full output: http://webkit-queues.appspot.com/results/6479526041223168
Jer Noble
Comment 6 2014-01-23 20:35:35 PST
Created attachment 222072 [details] Patch for landing
Jer Noble
Comment 7 2014-01-23 20:36:07 PST
Comment on attachment 222072 [details] Patch for landing Now with fewer OOPS.
WebKit Commit Bot
Comment 8 2014-01-23 21:11:11 PST
Comment on attachment 222072 [details] Patch for landing Clearing flags on attachment: 222072 Committed r162686: <http://trac.webkit.org/changeset/162686>
Note You need to log in before you can comment on or make changes to this bug.