[iOS] Protect against possbile deadlock by delaying video layer creation https://bugs.webkit.org/show_bug.cgi?id=127505

Reviewed by Eric Carlson.

Work around a possible deadlock on iOS when creating a media element
backed by AVFoundation by delaying creation of the AVPlayerLayer.
The deadlock can occur when the web thread is doing CALayer layout
while taking the web thread lock, while CoreMedia is doing property
access on an async thread while taking the CM lock, and each is waiting
for the other's lock to be released.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::createVideoLayer):


Canonical link: https://commits.webkit.org/145556@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162686 268f45cc-cd09-0410-ab3c-d52691b4dbfc